--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 
   <body>
     <header>
-      <h1 class="animate__animated animate__bounce">Felipe Casal Web Developer</h1>
+      <h1 class="animate__animated animate__bounce">
+        Felipe Casal Web Developer
+      </h1>
       <nav>
         <ul class="nav-bar">
           <li><i class="gg-home-alt"></i><a href="">Home</a></li>
           <li>
             <i class="gg-awards"></i><a href="#tecnologias">Tecnologias</a>
           </li>
-          <li><i class="gg-website"></i><a href="">Proyectos</a></li>
+          <li><i class="gg-website"></i><a href="#Proyectos">Proyectos</a></li>
           <li><i class="gg-smartphone-shake"></i><a href="">Contacto</a></li>
         </ul>
       </nav>
@@ -35,53 +37,69 @@
         <img
           src="./img/WhatsApp Image 2023-11-29 at 16.25.08 (1).jpeg"
           alt=""
-          class="img-perfil "
+          class="img-perfil"
         />
       </div>
     </section>
 
-   
-      <section class="section-tecnologias" id="tecnologias">
+    <section class="section-tecnologias" id="tecnologias">
+      <h2>Tecnologias</h2>
 
-
-        <h2 >Tecnologias</h2>
-
-
-        <div class="container-tecnologias">
-          <div class="tecnologias">
-            <i class="fa-brands fa-html5 fa-8x"></i> HTML
-          </div>
-          <div class="tecnologias">
-            <i class="fa-brands fa-css3-alt fa-8x"></i> CSS
-          </div>
-          <div class="tecnologias">
-            <i class="fa-brands fa-sass fa-8x"></i> Sass
-          </div>
-          <div class="tecnologias">
-            <i class="fa-brands fa-js fa-8x"></i> JS
-          </div>
-          <div class="tecnologias">
-            <i class="fa-brands fa-bootstrap fa-8x"></i> Boostrap
-          </div>
-          <div class="tecnologias">
-            <i class="fa-brands fa-github fa-8x"></i> GitHub
-          </div>
+      <div class="container-tecnologias">
+        <div class="tecnologias">
+          <i class="fa-brands fa-html5 fa-8x"></i> HTML
         </div>
-
-        <div class="certificados">
-          <img
-            src="./img/6463d0dfcd11fe00027885b4 (4).png"
-            alt=""
-            class="img-certificados"
-          />
-          <img
-            src="./img/64df30e33fe92d4606f7907b (2).png"
-            alt=""
-            class="img-certificados"
-          />
+        <div class="tecnologias">
+          <i class="fa-brands fa-css3-alt fa-8x"></i> CSS
         </div>
-      </section>
+        <div class="tecnologias">
+          <i class="fa-brands fa-sass fa-8x"></i> Sass
+        </div>
+        <div class="tecnologias"><i class="fa-brands fa-js fa-8x"></i> JS</div>
+        <div class="tecnologias">
+          <i class="fa-brands fa-bootstrap fa-8x"></i> Boostrap
+        </div>
+        <div class="tecnologias">
+          <i class="fa-brands fa-github fa-8x"></i> GitHub
+        </div>
+      </div>
 
+      <div class="certificados">
+        <img
+          src="./img/6463d0dfcd11fe00027885b4 (4).png"
+          alt=""
+          class="img-certificados"
+        />
+        <img
+          src="./img/64df30e33fe92d4606f7907b (2).png"
+          alt=""
+          class="img-certificados"
+        />
+      </div>
+    </section>
+
+    <section class="section-proyectos" id="Proyectos">
+      <h2>Proyectos</h2>
+
+      <div class="container-proyectos">
+        <a href="https://coder-house-five.vercel.app/"
+          ><img src="./img/Html.png" alt="" class="imagenes-proyectos" /> HTML,
+          Css, Sass, Responsive</a
+        >
+
+        <a href="https://coder-java-script.vercel.app/ " class="hover-proyectos" 
+          ><img src="./img/JS.png" alt="" class="imagenes-proyectos" /> JavaScript</a
+        >
+
+        <a href="https://expanding-cards1.vercel.app/"
+          ><img src="./img/Expendin Cards.png" alt="" class="imagenes-proyectos" /> JS Proyect</a
+        >
+
+        <a href=""
+          ><img src="./img/CV.png" alt="" class="imagenes-proyectos" /> This Proyect</a
+        >
+      </div>
+    </section>
 
     <script type="module" src="script.js"></script>
     <script
