--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <h2>Sobre Mi</h2>
     <div class="container-sobreMi">
       <p>
-        Hola Soy Felipe Casal, actualmente estoy enfocado en el Desarrollo Web
-        Tengo dos cursos realizados con 6 meses de aprendizajes sobre
-        HTML,CSS,JS y otras tecnologias , estoy abierto a ofertas laborales
+        Hola Soy Felipe Casal, actualmente estoy enfocado en el Desarrollo Web y Programacion
+        Tengo dos cursos realizados con 12 meses (1 año) de aprendizajes sobre
+        HTML,CSS,JS, React JS, Boostrap, Sass y otras tecnologias , estoy abierto a ofertas laborales
         formales. Vivo en Argentina y tengo mucho tiempo libre.
       </p>
 
@@ -58,6 +58,12 @@
       </div>
       <div class="tecnologias">
         <i class="fa-brands fa-github fa-8x"></i> GitHub
+      </div>
+      <div class="tecnologias">
+        <i class="fa-brands fa-react fa-8x"></i> React JS
+      </div>
+      <div class="tecnologias">
+        <i class="fa-brands fa-medapps fa-8x"></i> Apis
       </div>
     </div>
 
