React js agregado

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container-sobreMi">
       <p>
         Hola Soy Felipe Casal, actualmente estoy enfocado en el Desarrollo Web y Programacion
-        Tengo dos cursos realizados con 12 meses (1 año) de aprendizajes sobre
+        Tengo tres (3) cursos realizados con 12 meses (1 año) de aprendizajes sobre
         HTML,CSS,JS, React JS, Boostrap, Sass y otras tecnologias , estoy abierto a ofertas laborales
         formales. Vivo en Argentina y tengo mucho tiempo libre.
       </p>
@@ -86,6 +86,9 @@
 
       <a href="https://expanding-cards1.vercel.app/" class="hover-proyectos"><img src="./img/Expendin Cards.png" alt=""
           class="imagenes-proyectos" /> JS Proyect</a>
+
+      <a href="https://react-coder-eta.vercel.app/" class="hover-proyectos"><img src="./img/React-js.png" alt=""
+          class="imagenes-proyectos" /> React Ecommerce Proyect</a>
 
       <a href="" class="hover-proyectos"><img src="./img/CV.png" alt="" class="imagenes-proyectos" /> This Proyect</a>
     </div>
