agregado de react

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <li>
           <i class="gg-awards"></i><a href="#tecnologias">Tecnologias</a>
         </li>
+        <li>
+          <i class="gg-awards"></i><a href="#certificados">Certificados</a>
+        </li>
         <li><i class="gg-website"></i><a href="#Proyectos">Proyectos</a></li>
         <li><i class="gg-smartphone-shake"></i><a href="#contacto">Contacto</a></li>
       </ul>
@@ -67,10 +70,17 @@
       </div>
     </div>
 
-    <div class="certificados">
-      <img src="./img/6463d0dfcd11fe00027885b4 (4).png" alt="" class="img-certificados" />
-      <img src="./img/64df30e33fe92d4606f7907b (2).png" alt="" class="img-certificados" />
-    </div>
+    <section id="certificados">
+      <h2 class="certificados-title">Certificados</h2>
+  
+      <div class="certificados">
+        <img src="./img/6463d0dfcd11fe00027885b4 (4).png" alt="" class="img-certificados" />
+        <img src="./img/64df30e33fe92d4606f7907b (2).png" alt="" class="img-certificados" />
+        <img src="./img/certificado-react.png" alt="" class="img-certificados" />
+      </div>
+      
+    </section>
+
   </section>
 
   <section class="section-proyectos" id="Proyectos">
