--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         <img src="./img/6463d0dfcd11fe00027885b4 (4).png" alt="" class="img-certificados" />
         <img src="./img/64df30e33fe92d4606f7907b (2).png" alt="" class="img-certificados" />
         <img src="./img/certificado-react.png" alt="" class="img-certificados" />
+        <img src="./img/certificado-frontend.jpeg" alt="" class="img-certificados" />
       </div>
       
     </section>
